# rag

./: .coderabbit.yaml  .env.development.local  .env.example  .git-filter-repo-replacements.txt  .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INTEGRATION_TESTS_README.md  LICENSE  OPTIMIZED_TESTING_STRATEGY.md  PINECONE_MIGRATION.md  README.md  SECURITY_FIXES_REPORT.md  TESTING_SUMMARY.md  TEST_OPTIMIZATION_ANALYSIS.md  TEST_OPTIMIZATION_SUMMARY.md  demo_usage.py  drizzle.config.ts  llama_deploy.yml  middleware.ts  next.config.mjs  optimized_test_runner.py  package-lock.json  package.json  performance-test-suite.py  pnpm-lock.yaml  pyproject.toml  run_integration_tests.py  test-document.txt  test-unsupported.xyz  test_offline_functionality.py  test_rag_functionality.py  test_security_fixes.py  tsconfig.tsbuildinfo  vercel.json
.claude/: session_context.md
.claude/docs/: README.md  architecture-analysis.md  code-review-findings.md  file-structure-analysis.md  implementation-guide.md  integration-testing-specifications.md  (+8 more)
.devcontainer/: devcontainer.json
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
ai/: actions.ts
app/: globals.css  layout.tsx
db/: migrate.ts  queries.ts  schema.ts
drizzle/: 0001_add_documents.sql
lib/: document-processor.ts  document-title-generator.ts  huggingface-embeddings.ts  indexing-state-machine.ts  pinecone-rag-core.ts  rag-demonstration-manager.ts  rag-demonstration-types.ts  string-utils.ts  types.ts  utils.ts
scripts/: check-tables.js  check-user.js  create-missing-user.js  debug-rag.js  migrate-to-pinecone.ts  test-create-user.js  test-indexing-flow.js  test-rag.js
src/: .env.example  agentic.py  agentic_workflow.py  cache.py  config.py  generate.py  health_monitor.py  http_server.py  index.py  metrics.py  multimodal.py  performance.py  query.py  rag_workflow.py  resource_manager.py  security.py  security_config.py  settings.py  tts.py  unified_config.py  unified_workflow.py  verification.py  verification_integration.py  workflow.py
tests/: conftest.py  conftest_optimized.py  full_test.py  test_security.py  test_unified_integration.py
web/: README.md  next.config.js  package-lock.json  package.json  tsconfig.json
(+360 files in other folders)
